# memory-court-build-week

./: .env.example  .gitignore  CODEX_EVIDENCE.md  DEMO_SCRIPT.md  PREEXISTING_VS_NEW.md  README.md  SECURITY.md  SUBMISSION.md  railway.json
.github/workflows/: verify.yml
backend/: Dockerfile  pyproject.toml
backend/memory_court/: __init__.py  app.py  cases.py  config.py  guard_adapter.py  model_client.py  models.py  rate_limit.py  replay.py  session.py
backend/tests/: test_api.py  test_cases.py  test_codex_replay.py  test_guard_adapter.py  test_model_client.py  test_session.py  test_vendor.py
cases/: last_birthday.json  silent_lifeboat.json
docs/plans/: 2026-07-18-memory-court-implementation.md
docs/specs/: 2026-07-18-memory-court-design.md
docs/verification/: FINAL_REPORT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: CasePanel.tsx  DecisionTrace.tsx  GuardPanel.tsx  Icons.tsx  ModeBadge.tsx
replay/: last_birthday.json  silent_lifeboat.codex-actions.json  silent_lifeboat.json
scripts/: verify.sh
