[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-court-api"
version = "0.1.0"
description = "Auditable GPT-5.6 memory-intervention demo for OpenAI Build Week"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.27,<1",
  "openai>=1.109,<2",
  "pydantic>=2.10,<3",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.25,<2",
]

[tool.setuptools.packages.find]
include = ["memory_court*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
